--- a/index.ipynb
+++ b/index.ipynb
@@ -41,13 +41,395 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Statistics</th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>JURISDICTION NAME</td>\n",
+       "      <td>10005.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>COUNT PARTICIPANTS</td>\n",
+       "      <td>9.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>COUNT FEMALE</td>\n",
+       "      <td>4.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PERCENT FEMALE</td>\n",
+       "      <td>0.404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>COUNT MALE</td>\n",
+       "      <td>4.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>PERCENT MALE</td>\n",
+       "      <td>0.396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>COUNT GENDER UNKNOWN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>PERCENT GENDER UNKNOWN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>COUNT GENDER TOTAL</td>\n",
+       "      <td>9.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>PERCENT GENDER TOTAL</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>COUNT PACIFIC ISLANDER</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>PERCENT PACIFIC ISLANDER</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>COUNT HISPANIC LATINO</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>PERCENT HISPANIC LATINO</td>\n",
+       "      <td>0.105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>COUNT AMERICAN INDIAN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>PERCENT AMERICAN INDIAN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>COUNT ASIAN NON HISPANIC</td>\n",
+       "      <td>3.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>PERCENT ASIAN NON HISPANIC</td>\n",
+       "      <td>0.437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>COUNT WHITE NON HISPANIC</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>PERCENT WHITE NON HISPANIC</td>\n",
+       "      <td>0.036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>COUNT BLACK NON HISPANIC</td>\n",
+       "      <td>2.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>PERCENT BLACK NON HISPANIC</td>\n",
+       "      <td>0.181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>COUNT OTHER ETHNICITY</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>PERCENT OTHER ETHNICITY</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>COUNT ETHNICITY UNKNOWN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>PERCENT ETHNICITY UNKNOWN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>COUNT ETHNICITY TOTAL</td>\n",
+       "      <td>9.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>PERCENT ETHNICITY TOTAL</td>\n",
+       "      <td>79.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>COUNT PERMANENT RESIDENT ALIEN</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>PERCENT PERMANENT RESIDENT ALIEN</td>\n",
+       "      <td>0.061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>COUNT US CITIZEN</td>\n",
+       "      <td>8.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>PERCENT US CITIZEN</td>\n",
+       "      <td>0.739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>COUNT OTHER CITIZEN STATUS</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>PERCENT OTHER CITIZEN STATUS</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>COUNT CITIZEN STATUS UNKNOWN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>PERCENT CITIZEN STATUS UNKNOWN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>COUNT CITIZEN STATUS TOTAL</td>\n",
+       "      <td>9.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>PERCENT CITIZEN STATUS TOTAL</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>COUNT RECEIVES PUBLIC ASSISTANCE</td>\n",
+       "      <td>2.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>PERCENT RECEIVES PUBLIC ASSISTANCE</td>\n",
+       "      <td>0.151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>COUNT NRECEIVES PUBLIC ASSISTANCE</td>\n",
+       "      <td>7.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>PERCENT NRECEIVES PUBLIC ASSISTANCE</td>\n",
+       "      <td>0.649</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>COUNT PUBLIC ASSISTANCE UNKNOWN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>PERCENT PUBLIC ASSISTANCE UNKNOWN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>COUNT PUBLIC ASSISTANCE TOTAL</td>\n",
+       "      <td>9.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>JURISDICTION NAME</td>\n",
+       "      <td>COUNT PARTICIPANTS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>10001</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>10002</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>10003</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>10004</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>10005</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>10006</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>10007</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>10009</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>10010</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>10011</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Average Statistics          Unnamed: 1\n",
+       "1                     JURISDICTION NAME             10005.8\n",
+       "2                    COUNT PARTICIPANTS                 9.4\n",
+       "3                          COUNT FEMALE                 4.8\n",
+       "4                        PERCENT FEMALE               0.404\n",
+       "5                            COUNT MALE                 4.6\n",
+       "6                          PERCENT MALE               0.396\n",
+       "7                  COUNT GENDER UNKNOWN                   0\n",
+       "8                PERCENT GENDER UNKNOWN                   0\n",
+       "9                    COUNT GENDER TOTAL                 9.4\n",
+       "10                 PERCENT GENDER TOTAL                  80\n",
+       "11               COUNT PACIFIC ISLANDER                   0\n",
+       "12             PERCENT PACIFIC ISLANDER                   0\n",
+       "13                COUNT HISPANIC LATINO                   2\n",
+       "14              PERCENT HISPANIC LATINO               0.105\n",
+       "15                COUNT AMERICAN INDIAN                   0\n",
+       "16              PERCENT AMERICAN INDIAN                   0\n",
+       "17             COUNT ASIAN NON HISPANIC                 3.6\n",
+       "18           PERCENT ASIAN NON HISPANIC               0.437\n",
+       "19             COUNT WHITE NON HISPANIC                 0.8\n",
+       "20           PERCENT WHITE NON HISPANIC               0.036\n",
+       "21             COUNT BLACK NON HISPANIC                 2.6\n",
+       "22           PERCENT BLACK NON HISPANIC               0.181\n",
+       "23                COUNT OTHER ETHNICITY                 0.4\n",
+       "24              PERCENT OTHER ETHNICITY                0.04\n",
+       "25              COUNT ETHNICITY UNKNOWN                   0\n",
+       "26            PERCENT ETHNICITY UNKNOWN                   0\n",
+       "27                COUNT ETHNICITY TOTAL                 9.4\n",
+       "28              PERCENT ETHNICITY TOTAL                79.9\n",
+       "29       COUNT PERMANENT RESIDENT ALIEN                 0.5\n",
+       "30     PERCENT PERMANENT RESIDENT ALIEN               0.061\n",
+       "31                     COUNT US CITIZEN                 8.9\n",
+       "32                   PERCENT US CITIZEN               0.739\n",
+       "33           COUNT OTHER CITIZEN STATUS                   0\n",
+       "34         PERCENT OTHER CITIZEN STATUS                   0\n",
+       "35         COUNT CITIZEN STATUS UNKNOWN                   0\n",
+       "36       PERCENT CITIZEN STATUS UNKNOWN                   0\n",
+       "37           COUNT CITIZEN STATUS TOTAL                 9.4\n",
+       "38         PERCENT CITIZEN STATUS TOTAL                  80\n",
+       "39     COUNT RECEIVES PUBLIC ASSISTANCE                 2.3\n",
+       "40   PERCENT RECEIVES PUBLIC ASSISTANCE               0.151\n",
+       "41    COUNT NRECEIVES PUBLIC ASSISTANCE                 7.1\n",
+       "42  PERCENT NRECEIVES PUBLIC ASSISTANCE               0.649\n",
+       "43      COUNT PUBLIC ASSISTANCE UNKNOWN                   0\n",
+       "44    PERCENT PUBLIC ASSISTANCE UNKNOWN                   0\n",
+       "45        COUNT PUBLIC ASSISTANCE TOTAL                 9.4\n",
+       "46                    JURISDICTION NAME  COUNT PARTICIPANTS\n",
+       "47                                10001                  44\n",
+       "48                                10002                  35\n",
+       "49                                10003                   1\n",
+       "50                                10004                   0\n",
+       "51                                10005                   2\n",
+       "52                                10006                   6\n",
+       "53                                10007                   1\n",
+       "54                                10009                   2\n",
+       "55                                10010                   0\n",
+       "56                                10011                   3"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import pandas as pd\n",
+    "df = pd.read_excel('Data/Zipcode_Demos.xlsx', header=1,usecols=[0,1])\n",
+    "\n",
+    "df = df.drop(0)\n",
+    "df.head(56)\n",
+    "\n",
+    "#This data set seems to include descriptions of the population of certain urisdictions. \n",
+    "#The first column is the statistic and the second is the value\n",
+    "#At the bottom there are a list of jusridictions and the number of rspondants"
    ]
   },
   {
